--- a/Calculator.csproj
+++ b/Calculator.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Formula\Calculator1.cs" />
+    <Compile Include="Formula\Calculator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
